--- a/server/package.json
+++ b/server/package.json
@@ -18,5 +18,8 @@
     "graphql": "^16.6.0",
     "jsonwebtoken": "^9.0.0",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
